# ebpf-bye-dpi

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  test-linux.sh  test.sh
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml  build.rs  stub.skel.rs
daemon/src/: auto_logic.rs  bpf.rs  config.rs  injector.rs  l7.rs  main.rs  metrics.rs  ringbuf.rs  rules.rs  state.rs  tc.rs
daemon/tests/: netns_integration.rs
docs/: DEVELOPMENT.md  INTERVIEW.md  RELEASE_PROFILE.md  STATE_MACHINE.md
ebpf/src/: Makefile  goodbyedpi.bpf.c  vmlinux.h
plans/: ansible-deployment-plan.md
profiles/: provider-working-zapret.txt
proto/: Cargo.toml
proto/src/: lib.rs
scripts/: check-status.sh  diag-ipv6-quic-frag.sh  install.sh  run-goodbyedpi.sh  test-netns-integration.sh  trace-logs.sh
systemd/: goodbyedpi.service
