[package]
name = "goodbyedpi-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
goodbyedpi-proto = { path = "../proto" }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { version = "1.41", features = ["full"] }
